delete user api (if pending)
